--- a/ms-customer/src/main/resources/application.yaml
+++ b/ms-customer/src/main/resources/application.yaml
@@ -4,10 +4,13 @@ spring:
     username: root
     password: root
     driver-class-name: org.h2.Driver
-    h2:
-      console:
-        enabled: true
+  h2:
+    console:
+      enabled: true
   application:
     name: ms-customer
 server:
     port: 8080
+logging:
+  level:
+    org.modelmapper: DEBUG
